--- a/Jisshu/template/dl.html
+++ b/Jisshu/template/dl.html
@@ -1,5 +1,5 @@
 
-<!Code Developer By @zishananis_official >
+<!Code Developer By @RDX_PVT_LTD >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -78,7 +78,7 @@
                                 This is a Telegram Bot to Stream <span>Movies</span> and <span>Series</span> directly on
                                 Telegram. You can also
                                 <span>download</span> them if you want. This bot is developed by <a
-                                    href="https://telegram.dog/zishananis_official"><span style="font-weight: 700;">ZISHAN</span></a>
+                                    href="https://telegram.dog/RDX_PVT_LTD"><span style="font-weight: 700;">RDX_PVT_LTD</span></a>
                                 <br><br>If you like this bot, then don't
                                 forget to share it with your friends and family.
                             </p>
@@ -87,13 +87,13 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/zishananis">
+                                <a class="magnet" href="https://t.me/RDX_PVT_LTD">
                                     <button>BOTS CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/filmsexpert2">
+                                <a class="magnet" href="https://t.me/RDX_PVT_GROUP">
                                     <button>SUPPORT GROUP</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/teamfilmsexpert">
+                                <a class="magnet" href="https://t.me/MC_MOVIES_HD">
                                     <button>MOVIES CHANNEL</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
@@ -105,7 +105,7 @@
                         <div class="abt-sec" id="contact">
                             <p style="text-align: center;">Report Bugs and Contact us on Telegram Below</p>
                             <div class="links contact">
-                                <a href="https://t.me/zishananis_official">
+                                <a href="https://t.me/RDX1444">
                                     <button>CONTACT</button>
                                 </a>
                             </div>
@@ -141,8 +141,8 @@
 
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/ZISHANANIS_OFFICIAL"><span
-                                style="font-weight: 700;">⚡Z!$HAN ANI$⚡</span></a>. All
+                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/RDX_PVT_LTD"><span
+                                style="font-weight: 700;">RDX_PVT_LTD</span></a>. All
                         Rights Reserved.</h5>
                 </div>
             </center>
