--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -1,5 +1,5 @@
 
-<!Code Developer By JISSHU_BOTS >
+<!Code Developer By RDX_PVT_LTD >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -85,10 +85,10 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/JISSHU_BOTS">
+                                <a class="magnet" href="https://t.me/RDX_PVT_LTD">
                                     <button>BOTS CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_support">
+                                <a class="magnet" href="https://t.me/Jissh">
                                     <button>SUPPORT GROUP</button>
                                 </a>
                                 <a class="magnet" href="https://t.me/Jisshu_Originals">
