--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -88,10 +88,10 @@
                                 <a class="magnet" href="https://t.me/RDX_PVT_LTD">
                                     <button>BOTS CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jissh">
+                                <a class="magnet" href="https://t.me/RDX_PVT_GROUP">
                                     <button>SUPPORT GROUP</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_Originals">
+                                <a class="magnet" href="https://t.me/MC_MOVIES_HD">
                                     <button>MOVIES CHANNEL</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
@@ -103,7 +103,7 @@
                         <div class="abt-sec" id="contact">
                             <p style="text-align: center;">Report Bugs and Contact us on Telegram Below</p>
                             <div class="links contact">
-                                <a href="https://t.me/JisshuDeveloperBot">
+                                <a href="https://t.me/RDX1444">
                                     <button>CONTACT</button>
                                 </a>
                             </div>
@@ -116,8 +116,8 @@
         <footer>
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/ZISHANANIS_OFFICIAL"><span
-                                style="font-weight: 700;">⚡Z!$HAN ANI$⚡</span></a>. All
+                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/RDX_PVT_LTD"><span
+                                style="font-weight: 700;">RDX_PVT_LTD</span></a>. All
                         Rights Reserved.</h5>
                 </div>
             </center>
