--- a/Jisshu/template/dl.html
+++ b/Jisshu/template/dl.html
@@ -90,7 +90,7 @@
                                 <a class="magnet" href="https://t.me/RDX_PVT_LTD">
                                     <button>BOTS CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/RDX_PVT_GROUP">
+                                <a class="magnet" href="https://t.me/MC_MOVIES_PVT">
                                     <button>SUPPORT GROUP</button>
                                 </a>
                                 <a class="magnet" href="https://t.me/MC_MOVIES_HD">
