--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -76,7 +76,7 @@
                                 This is a Telegram Bot to Stream <span>Movies</span> and <span>Series</span> directly on
                                 Telegram. You can also
                                 <span>download</span> them if you want. This bot is developed by <a
-                                    href="https://telegram.dog/IM_JISSHU"><span style="font-weight: 700;">ZISHAN</span></a>
+                                    href="https://telegram.dog/RDX_PVT_LTD"><span style="font-weight: 700;">RDX_PVT_LTD</span></a>
                                 <br><br>If you like this bot, then don't
                                 forget to share it with your friends and family.
                             </p>
@@ -88,7 +88,7 @@
                                 <a class="magnet" href="https://t.me/RDX_PVT_LTD">
                                     <button>BOTS CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/RDX_PVT_GROUP">
+                                <a class="magnet" href="https://t.me/MC_MOVIES_PVT">
                                     <button>SUPPORT GROUP</button>
                                 </a>
                                 <a class="magnet" href="https://t.me/MC_MOVIES_HD">
