--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -92,7 +92,7 @@
                                     <button>SUPPORT GROUP</button>
                                 </a>
                                 <a class="magnet" href="https://t.me/MC_MOVIES_HD">
-                                    <button>MOVIES CHANNEL</button
+                                    <button>MOVIES CHANNEL</button>
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
                                     <button>EPITOME QUALITY</button>
