--- a/Jisshu/template/dl.html
+++ b/Jisshu/template/dl.html
@@ -87,8 +87,8 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/MC_MOVIES_HD">
-                                    <button>MOVIES CHANNEL</button
+                                <a class="magnet" href="https://t.me/MC_MOVIES_PVT">
+                                    <button>📌 JOIN UPDATE CHANNEL 📌</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
                                     <button>EPITOME QUALITY</button>
