--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -85,14 +85,8 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/RDX_PVT_LTD">
-                                    <button>BOTS CHANNEL</button>
-                                </a>
                                 <a class="magnet" href="https://t.me/MC_MOVIES_PVT">
-                                    <button>SUPPORT GROUP</button>
-                                </a>
-                                <a class="magnet" href="https://t.me/MC_MOVIES_HD">
-                                    <button>MOVIES CHANNEL</button>
+                                    <button>📌 JOIN UPDATE CHANNEL 📌</button>
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
                                     <button>EPITOME QUALITY</button>
